--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,10 @@
 .search-bar {
     margin: 20px;
-    text-align: center;
+    text-align: left;
 }
 
 .search-bar input {
-    width: 75%;
+    width: 90%;
 }
 
 .video-item img {
@@ -20,6 +20,7 @@
 
 .list-group-item {
     cursor: pointer;
+    width: 35%;
 }
 
 .list-group-item:hover {
